Fix call to action issue on tablet

--- a/styles.css
+++ b/styles.css
@@ -1255,10 +1255,6 @@ footer img {
     margin: 0 11rem;
     position: static;
   }
-
-  .book-button {
-    margin-left: 18rem;
-  }
   
   .learn-more {
     margin-top: 2rem;
